harvest_glib_header_subdir = meson.project_name()

harvest_glib_public_headers = [
    'harvest.h',
]

install_headers(harvest_glib_public_headers, subdir: harvest_glib_header_subdir)

subdir('client')
subdir('common')
subdir('company')
subdir('estimate')
subdir('http')
subdir('invoice')
subdir('project')
subdir('task')
subdir('time-entry')
subdir('user')
