component_public_headers = [
    'harvest-estimate-enum-types.h',
	'harvest-estimate-item-category.h',
	'harvest-estimate-line-item.h',
	'harvest-estimate.h',
]

component_header_subdir = join_paths(harvest_glib_header_subdir, 'estimate')

install_headers(component_public_headers, subdir: component_header_subdir)
