component_public_headers = [
    'harvest-invoice-enum-types.h',
	'harvest-invoice-item-category.h',
	'harvest-invoice-line-item.h',
	'harvest-invoice.h',
]

component_header_subdir = join_paths(harvest_glib_header_subdir, 'invoice')

install_headers(component_public_headers, subdir: component_header_subdir)
